<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InformatikChat</string>
    <string name="menu_settings">Settings</string>
    
    <string name="prompt_ip">Server-IP</string>
    <string name="prompt_port">Server-Port</string>
    <string name="prompt_message">Enter Message</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    
    <string name="button_connect">Connect</string>
    <string name="button_send">Send</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    
    <string name="toast_noip">Please enter IP and port.</string>
    <string name="toast_nousername">Please enter your username and password.</string>
   
    <string name="title_activity_chat_client_login">Messages</string>
    <string name="title_activity_login">Login</string>

</resources>
